chore: I am working on the spacing issue on the packSlip

--- a/src/assets/label.scss
+++ b/src/assets/label.scss
@@ -66,7 +66,7 @@
   margin: auto;
   justify-content: space-evenly;
   margin-top: 2em;
-  margin-bottom: 4em;
+  margin-bottom: 5em;
 }
 
 .label_buttons {
